--- a/TailwindCss/package.json
+++ b/TailwindCss/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "npx tailwindcss -i ./src/css/app.css -o ./dist/css/tailwind.css --watch",
+    "dev": "NODE_ENV=production npx tailwindcss -i ./src/css/app.css -o ./dist/css/tailwind.css"
   },
   "keywords": [],
   "author": "",
