--- a/TailwindCss/package.json
+++ b/TailwindCss/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "npx tailwindcss -i ./src/css/app.css -o ./dist/css/tailwind.css --watch",
-    "dev": "NODE_ENV=production npx tailwindcss -i ./src/css/app.css -o ./dist/css/tailwind.css"
+    "prod": "NODE_ENV=production npx tailwindcss -i ./src/css/app.css -o ./dist/css/tailwind.css"
   },
   "keywords": [],
   "author": "",
